// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components Header 1`] = `
<div
  className="layout layout--auto"
>
  <div
    className="grid col-12"
  >
    <div
      className="grid col-12 grid--stretch"
    >
      <div
        className="col-2"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            Go Back
          </div>
        </div>
      </div>
      <div
        className="col-6"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            <h2>
              Page Title
            </h2>
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            Action 1
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            Action 2
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="grid col-10"
      >
        <div
          className="col-1"
        >
          <div
            className="box1"
            style={Object {}}
          >
            <div
              className="grid col-12 grid--middle grid--center"
            >
              1
            </div>
          </div>
        </div>
        <div
          className="col-1"
        >
          <div
            className="box1"
            style={Object {}}
          >
            <div
              className="grid col-12 grid--middle grid--center"
            >
              2
            </div>
          </div>
        </div>
        <div
          className="col-1"
        >
          <div
            className="box1"
            style={Object {}}
          >
            <div
              className="grid col-12 grid--middle grid--center"
            >
              3
            </div>
          </div>
        </div>
        <div
          className="col-1"
        >
          <div
            className="box1"
            style={Object {}}
          >
            <div
              className="grid col-12 grid--middle grid--center"
            >
              4
            </div>
          </div>
        </div>
        <div
          className="col-1"
        >
          <div
            className="box1"
            style={Object {}}
          >
            <div
              className="grid col-12 grid--middle grid--center"
            >
              5
            </div>
          </div>
        </div>
        <div
          className="col-1"
        >
          <div
            className="box1"
            style={Object {}}
          >
            <div
              className="grid col-12 grid--middle grid--center"
            >
              6
            </div>
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            B
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components Pagination 1`] = `
<div
  className="layout layout--stretch"
>
  <div
    className="grid col-12 grid--root"
  >
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          &lt;
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          1
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box2"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          ...
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          5
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          6
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          7
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          8
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          9
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          10
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box2"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          ...
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          20
        </div>
      </div>
    </div>
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          &gt;
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Auto Flow 1`] = `
<div
  className="layout layout--auto"
>
  <div
    className="grid col-12 grid--stretch"
  >
    <div
      className="col-1"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          A
        </div>
      </div>
    </div>
    <div
      className="col-2"
    >
      <div
        className="box2"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          B
        </div>
      </div>
    </div>
    <div
      className="col-4"
    >
      <div
        className="box3"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          C
        </div>
      </div>
    </div>
    <div
      className="col-3"
    >
      <div
        className="box4"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          D
        </div>
      </div>
    </div>
    <div
      className="col-2"
    >
      <div
        className="box5"
        style={
          Object {
            "height": 100,
          }
        }
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          E
        </div>
      </div>
    </div>
    <div
      className="col-2"
    >
      <div
        className="box1"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          A
        </div>
      </div>
    </div>
    <div
      className="col-2"
    >
      <div
        className="box2"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          B
        </div>
      </div>
    </div>
    <div
      className="col-2"
    >
      <div
        className="box3"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          C
        </div>
      </div>
    </div>
    <div
      className="col-2"
    >
      <div
        className="box4"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          D
        </div>
      </div>
    </div>
    <div
      className="col-2"
    >
      <div
        className="box5"
        style={Object {}}
      >
        <div
          className="grid col-12 grid--middle grid--center"
        >
          E
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Fraction 1`] = `
<div
  className="layout layout--stretch"
>
  <div
    className="grid col-12 grid--root"
  >
    <h1>
      Auto Size
    </h1>
    <div
      className="grid col-12"
    />
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 1
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 2
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 2
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 3
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 3
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 3
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 4
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 4
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 4
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 4
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 5
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 5
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 5
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 5
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 5
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 6
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 6
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 6
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 6
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 6
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 6
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 7
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 7
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 7
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 7
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 7
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 7
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 7
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 8
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 8
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 8
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 8
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 8
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 8
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 8
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1 / 8
          </div>
        </div>
      </div>
    </div>
    <h1>
      8 - auto
    </h1>
    <div
      className="grid col-12"
    >
      <div
        className="col-8"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            8
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            12 - 8 = 4
          </div>
        </div>
      </div>
    </div>
    <h1>
      6 - 1/2 - 1/2
    </h1>
    <div
      className="grid col-12"
    >
      <div
        className="col-6"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            6
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            (12 - 6) / 2 = 3
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            (12 - 6) / 2 = 3
          </div>
        </div>
      </div>
    </div>
    <h1>
      Custom
    </h1>
    <div
      className="grid col-12"
    />
    <div
      className="grid col-12"
    >
      <div
        className="col-6"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            6 (fixed)
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Horizontal Align 1`] = `
<div
  className="layout layout--stretch"
>
  <div
    className="grid col-12 grid--root"
  >
    <div
      className="grid col-12 grid--left"
    >
      <div
        className="col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            LEFT
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12 grid--center"
    >
      <div
        className="col-2"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            CENTER
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12 grid--right"
    >
      <div
        className="col-2"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            RIGHT
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col-2"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            DEFAULT
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Nested 1`] = `
<div
  className="layout layout--stretch"
>
  <div
    className="grid col-12 grid--root"
  >
    <div
      className="grid col-12"
    >
      <div
        className="grid col-6"
      >
        <div
          className="box1 grid grid--no-bottom"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            <div
              className="col-6"
            >
              <div
                className="box3"
                style={Object {}}
              >
                <div
                  className="grid col-12 grid--middle grid--center"
                >
                  C
                </div>
              </div>
            </div>
            <div
              className="col-6"
            >
              <div
                className="box4"
                style={Object {}}
              >
                <div
                  className="grid col-12 grid--middle grid--center"
                >
                  D
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="grid col-6"
      >
        <div
          className="box2 grid grid--no-bottom"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            <div
              className="col-3"
            >
              <div
                className="box4"
                style={Object {}}
              >
                <div
                  className="grid col-12 grid--middle grid--center"
                >
                  D
                </div>
              </div>
            </div>
            <div
              className="col--offset-6 col-3"
            >
              <div
                className="box5"
                style={Object {}}
              >
                <div
                  className="grid col-12 grid--middle grid--center"
                >
                  E
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="grid col-6"
      >
        <div
          className="box1 grid grid--no-bottom"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            <div
              className="col--offset-3 col-6"
            >
              <div
                className="box4"
                style={Object {}}
              >
                <div
                  className="grid col-12 grid--middle grid--center"
                >
                  D
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="grid col-6"
      >
        <div
          className="box2 grid grid--no-bottom"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            <div
              className="col-4"
            >
              <div
                className="box4"
                style={Object {}}
              >
                <div
                  className="grid col-12 grid--middle grid--center"
                >
                  D
                </div>
              </div>
            </div>
            <div
              className="col--offset-4 col-4"
            >
              <div
                className="box5"
                style={Object {}}
              >
                <div
                  className="grid col-12 grid--middle grid--center"
                >
                  E
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="grid col-6"
      >
        <div
          className="box2 grid grid--no-bottom"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            <div
              className="col-1"
            >
              <div
                className="box1"
                style={Object {}}
              >
                <div
                  className="grid col-12 grid--middle grid--center"
                >
                  1
                </div>
              </div>
            </div>
            <div
              className="col-1"
            >
              <div
                className="box2"
                style={Object {}}
              >
                <div
                  className="grid col-12 grid--middle grid--center"
                >
                  2
                </div>
              </div>
            </div>
            <div
              className="col-1"
            >
              <div
                className="box3"
                style={Object {}}
              >
                <div
                  className="grid col-12 grid--middle grid--center"
                >
                  3
                </div>
              </div>
            </div>
            <div
              className="col-1"
            >
              <div
                className="box4"
                style={Object {}}
              >
                <div
                  className="grid col-12 grid--middle grid--center"
                >
                  4
                </div>
              </div>
            </div>
            <div
              className="col-1"
            >
              <div
                className="box5"
                style={Object {}}
              >
                <div
                  className="grid col-12 grid--middle grid--center"
                >
                  5
                </div>
              </div>
            </div>
            <div
              className="col-1"
            >
              <div
                className="box1"
                style={Object {}}
              >
                <div
                  className="grid col-12 grid--middle grid--center"
                >
                  6
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Offset 1`] = `
<div
  className="layout layout--stretch"
>
  <div
    className="grid col-12 grid--root"
  >
    <div
      className="grid col-12"
    >
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            +0
          </div>
        </div>
      </div>
      <div
        className="col--offset-7 col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            +7
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col--offset-1 col-1"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            +1
          </div>
        </div>
      </div>
      <div
        className="col--offset-5 col-1"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            +5
          </div>
        </div>
      </div>
      <div
        className="col--offset-1 col-1"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            +1
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col--offset-2 col-1"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            +2
          </div>
        </div>
      </div>
      <div
        className="col--offset-3 col-1"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            +3
          </div>
        </div>
      </div>
      <div
        className="col--offset-3 col-1"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            +3
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col--offset-3 col-1"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            +3
          </div>
        </div>
      </div>
      <div
        className="col--offset-1 col-1"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            +1
          </div>
        </div>
      </div>
      <div
        className="col--offset-5 col-1"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            +5
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col--offset-4 col-1"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            +4
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            +0
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Sizing 1`] = `
<div
  className="layout layout--stretch"
>
  <div
    className="grid col-12 grid--root"
  >
    <div
      className="grid col-12"
    >
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            1
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            2
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            2
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            2
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            2
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            2
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            2
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col-3"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            3
          </div>
        </div>
      </div>
      <div
        className="col-3"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            3
          </div>
        </div>
      </div>
      <div
        className="col-3"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            3
          </div>
        </div>
      </div>
      <div
        className="col-3"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            3
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col-4"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            4
          </div>
        </div>
      </div>
      <div
        className="col-4"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            4
          </div>
        </div>
      </div>
      <div
        className="col-4"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            4
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col-6"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            6
          </div>
        </div>
      </div>
      <div
        className="col-6"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            6
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            Auto
          </div>
        </div>
      </div>
    </div>
    <div
      className="grid col-12"
    >
      <div
        className="col-12"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            12
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Vertical Align 1`] = `
<div
  className="layout layout--stretch"
>
  <div
    className="grid col-12 grid--root"
  >
    <h1>
      Item Align
    </h1>
    <div
      className="grid col-12"
    >
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={
            Object {
              "height": 300,
            }
          }
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
             
          </div>
        </div>
      </div>
      <div
        className="col--top col-2"
      >
        <div
          className="box2"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            TOP
          </div>
        </div>
      </div>
      <div
        className="col--middle col-2"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            MIDDLE
          </div>
        </div>
      </div>
      <div
        className="col--bottom col-2"
      >
        <div
          className="box4"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            BOTTOM
          </div>
        </div>
      </div>
      <div
        className="col--middle col-2"
      >
        <div
          className="box3"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            MIDDLE
          </div>
        </div>
      </div>
      <div
        className="col-2"
      >
        <div
          className="box5"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            DEFAULT
          </div>
        </div>
      </div>
      <div
        className="col-1"
      >
        <div
          className="box1"
          style={
            Object {
              "height": 300,
            }
          }
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
             
          </div>
        </div>
      </div>
    </div>
    <h1>
      Grid Align
    </h1>
    <div
      className="grid col-12"
    >
      <div
        className="grid col-4 grid--top"
        style={
          Object {
            "height": 300,
          }
        }
      >
        <div
          className="col-12"
        >
          <div
            className="box3"
            style={Object {}}
          >
            <div
              className="grid col-12 grid--middle grid--center"
            >
              TOP
            </div>
          </div>
        </div>
      </div>
      <div
        className="grid col-4 grid--middle"
        style={
          Object {
            "height": 300,
          }
        }
      >
        <div
          className="col-12"
        >
          <div
            className="box3"
            style={Object {}}
          >
            <div
              className="grid col-12 grid--middle grid--center"
            >
              MIDDLE
            </div>
          </div>
        </div>
      </div>
      <div
        className="grid col-4 grid--bottom"
        style={
          Object {
            "height": 300,
          }
        }
      >
        <div
          className="col-12"
        >
          <div
            className="box3"
            style={Object {}}
          >
            <div
              className="grid col-12 grid--middle grid--center"
            >
              BOTTOM
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Holy Grail 1`] = `
<div
  className="layout holy-grail layout--fit"
>
  <div
    className="layout header layout--auto"
  >
    <div
      className="grid col-12 grid--root"
    >
      <h1>
        Header
      </h1>
    </div>
  </div>
  <div
    className="layout layout--stretch"
  >
    <div
      className="layout layout--stretch"
    >
      <div
        className="grid col-12 grid--root"
      >
        <div
          className="grid col-2 nav"
        >
          <h2>
            Nav
          </h2>
        </div>
        <div
          className="grid col-8 content"
        >
          <h2>
            Content
          </h2>
        </div>
        <div
          className="grid col-2 ads"
        >
          <h2>
            Ads
          </h2>
        </div>
      </div>
    </div>
    <div
      className="layout footer layout--auto"
    >
      <div
        className="grid col-12 grid--root"
      >
        <h1>
          Footer
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Stack 1`] = `
<div
  className="layout layout--stretch"
  root={true}
>
  <div
    className="layout layout--auto"
  >
    <div
      className="grid--no-margin grid col-12"
    >
      <div
        className="col-12"
      >
        <div
          className="box1"
          style={Object {}}
        >
          <div
            className="grid col-12 grid--middle grid--center"
          >
            Section 1
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="layout layout--stretch"
  >
    <div>
      <h1>
        SubSection 
        1
      </h1>
    </div>
    <div>
      <h1>
        SubSection 
        2
      </h1>
    </div>
    <div>
      <h1>
        SubSection 
        3
      </h1>
    </div>
  </div>
</div>
`;
